# dense

./: cabal.project  dense.cabal  matrix.cabal
elem/: Double.hs  Float.hs
lib/dense-common/: dense-common.cabal
lib/dense-common/Dense/: Vector.hs
lib/dense-matrix/: dense-matrix.cabal
lib/dense-matrix/mat/: Matrix.hs
lib/dense-matrix/sig/: T.hsig
lib/dense-matrix/vec/: V2.hs  V3.hs
mat/: Matrix.hs
vec/: V2.hs  V3.hs
