name:          dense
category:      Math
version:       0.0.1
license:       BSD2
cabal-version: 2
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/dense/
bug-reports:   http://github.com/ekmett/dense/issues
copyright:     Copyright (C) 2018 Edward A. Kmett
build-type:    Simple
synopsis:      Unpacked math
description:   Unpacked matrices

source-repository head
  type: git
  location: git://github.com/ekmett/dense.git

--private
library dense-elements
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends: base
  exposed-modules: Double Float

library
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends: dense-elements, dense-common, dense-matrix
  mixins:
    dense-matrix (Matrix as Dense.Matrix.Double) requires (T as Double),
    dense-matrix (Matrix as Dense.Matrix.Float) requires (T as Float)
  reexported-modules:
    Dense.Matrix.Double,
    Dense.Matrix.Float,
    Dense.Vector
