name:          dense-matrix
category:      Math
version:       0.0.1
license:       BSD2
cabal-version: 2
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/dense/
bug-reports:   http://github.com/ekmett/dense/issues
copyright:     Copyright (C) 2017 Edward A. Kmett
build-type:    Simple
synopsis:      Unpacked math
description:   Unpacked matrices

source-repository head
  type: git
  location: git://github.com/ekmett/matrix.git

library vec
  default-language: Haskell2010
  ghc-options: -Wall
  signatures: T
  hs-source-dirs: sig vec
  exposed-modules: V2 V3
  build-depends: base, dense-common, lens, linear

library
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends: base, dense-common, vec
  signatures: T
  hs-source-dirs: sig mat
  mixins: vec,
          vec (V2 as V22, V3 as V32) requires (T as V2),
          vec (V2 as V23, V3 as V33) requires (T as V3)
  exposed-modules: Matrix
  -- reexported-modules: V2, V3, V22, V23, V32, V33
